# get-engineering-done

./: .gitignore  CONTRIBUTING.md  README.md  package.json  pyproject.toml
infra/: ged-conventions.json  ged-protocols.json  ged-state.json
src/ged/: __init__.py  contracts.py
src/ged/agents/: ged-bibliographer.md  ged-consistency-checker.md  ged-debugger.md  ged-executor.md  ged-optimizer.md  ged-paper-writer.md  ged-planner.md  ged-referee.md  ged-researcher.md  ged-verifier.md
src/ged/commands/: branch-hypothesis.md  execute-phase.md  health.md  new-project.md  plan-phase.md  resume-work.md  review-paper.md  verify-work.md
src/ged/core/: config.py  constants.py  conventions.py  git_ops.py  kernel.py  phases.py  state.py
src/ged/hooks/: statusline.py
src/ged/mcp/: __init__.py  conventions_server.py  errors_server.py  patterns_server.py  protocols_server.py  state_server.py  verification_server.py
src/ged/specs/references/orchestration/: agent-delegation.md
src/ged/specs/references/protocols/: fatigue-fracture-protocols.md  fea-methodology-protocols.md  fluid-dynamics-protocols.md  seismic-design-protocols.md  structural-analysis-protocols.md  thermal-analysis-protocols.md
src/ged/specs/references/verification/: llm-engineering-errors.md
