[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "get-engineering-done"
version = "0.1.0"
description = "AI copilot for autonomous engineering analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Jesse Weigel", email = "jesse@jesseweigel.com" },
]
keywords = ["engineering", "ai", "structural-analysis", "verification", "autonomous"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/JesseRWeigel/get-engineering-done"
Repository = "https://github.com/JesseRWeigel/get-engineering-done"
Issues = "https://github.com/JesseRWeigel/get-engineering-done/issues"

[project.scripts]
ged = "ged.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ged"]
